# DebForLinuxCI_CD

./: .gitignore  CMakeLists.txt  ConsoleApplication4.cpp  CreateAll.sh  README.md  ci.yml  latin-checker_1.0_amd64.deb
.github/workflows/: ci.yml  github-ci.yml
DEBIAN/: CreateAll.sh  control
cicd/: UnityTest1.cpp  deploy.sh  test1.cpp  test2.cpp  test3.cpp
src/: CMakeLists.txt  Makefile  main.cpp
